Applications list alignment fixed

--- a/src/pages/applications/scss/Applications.scss
+++ b/src/pages/applications/scss/Applications.scss
@@ -432,6 +432,8 @@ body {
                 }
               }
               .application-gender {
+                max-width: 50px;
+                width: 100%;
                 p {
                   font-size: 12px;
                   line-height: 16px;
@@ -447,6 +449,8 @@ body {
                 }
               }
               .application-dob {
+                max-width: 70px;
+                width: 100%;
                 p {
                   font-size: 12px;
                   line-height: 16px;
@@ -461,6 +465,8 @@ body {
                 }
               }
               .application-district {
+                max-width: 100px;
+                width: 100%;
                 p {
                   font-size: 12px;
                   line-height: 16px;
@@ -480,6 +486,8 @@ body {
                 }
               }
               .application-qualification {
+                max-width: 70px;
+                width: 100%;
                 p {
                   font-size: 12px;
                   line-height: 16px;
@@ -494,6 +502,8 @@ body {
                 }
               }
               .application-mobile-no {
+                max-width: 70px;
+                width: 100%;
                 p {
                   font-size: 12px;
                   line-height: 16px;
@@ -602,10 +612,16 @@ body {
           .personal-details-heading-section {
             align-items: center;
             padding-bottom: 20px;
+            gap: 10px;
             .heading-name {
               font: 400 12px/16px $font-Roboto;
               color: $font-primary-color;
             }
+            .horizon-line{
+              flex: 1;
+              height: 1px;
+              background-color: $border-color;
+          }
           }
           .personal-details-section,.Guardian-details-section,.educational-details{
             max-width: 100%;
@@ -617,7 +633,19 @@ body {
               flex: 1 0 15%;
               margin: 0;
               padding: 0;
-              margin: 5px;
+            }
+            
+          }
+          .personal-details-section,.personal-details-section-two,.Guardian-details-section{
+            &>div{
+              width: 220px;
+            }
+            &>div:not(:last-child){
+              border-right: 1px solid lightgrey;
+            }
+            &>div:not(:first-child){
+              display: flex;
+              padding: 0 25px;
             }
           }
           .personal-details-section {
@@ -642,7 +670,7 @@ body {
           }
           .personal-details-section-two {
             justify-content: space-between;
-            max-width: 634px;
+            max-width: 657px;
             width: 100%;
             padding-bottom: 20px;
             p {
@@ -665,7 +693,21 @@ body {
           }
 
           .Guardian-details-heading-section {
+            display: flex;
+            align-items: center;
+            gap: 10px;
             padding-bottom: 20px;
+            .heading-name {
+              color: $font-primary-color;
+              font-family: 400;
+              font-size: 12px;
+              line-height: 16px;
+            }
+            .horizon-line{
+              flex: 1;
+              height: 1px;
+              background-color: $border-color;
+          }
           }
 
           .Guardian-details-section {
@@ -691,7 +733,22 @@ body {
           }
 
           .Educational-details-heading-section {
+
             padding-bottom: 20px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            .heading-name {
+              color: $font-primary-color;
+              font-family: 400;
+              font-size: 12px;
+              line-height: 16px;
+            }
+            .horizon-line{
+              flex: 1;
+              height: 1px;
+              background-color: $border-color;
+          }
           }
           .Educational-details-list-container {
             .educational-background-one-container {
